1.piyush/D47-Gateway-API/core-ui-app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-ui-route
  namespace: default
spec:
  parentRefs:
  - name: core-ui-nginx-gateway   # ✅ MATCH GATEWAY NAME
    namespace: nginx-gateway      # ✅ CORRECT NS
    sectionName: http-listener    # ✅ MATCH LISTENER NAME
  # hostnames:
  # - "core-ui.127.0.0.1.nip.io" # Maps to localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: core-ui-svc  # service name
      port: 80  # we exposed the service at port 80
